<resources>
    <string name="app_name">Weather App Diplom</string>
    <string name="sun_rise">Sun rise</string>
    <string name="sun_set">Sun set</string>
    <string name="moon_rise">Moon rise</string>
    <string name="moon_set">Moon set</string>
    <string name="moon_phase_description">Moon phase</string>
    <string name="min_temp">Minimum temperature</string>
    <string name="max_temp">Maximum temperature</string>
    <string name="average_temp">Average temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="average_visibility">Average visibility</string>
    <string name="precipitation">Precipitation</string>
    <string name="humidity">Humidity</string>
    <string name="rain_chance">Chance of rain</string>
    <string name="snow_chance">Chance of snow</string>
    <string name="info_description">info</string>
    <string name="moon_illumination">Moon illumination</string>
    <string name="name_of_city">Name of city</string>
    <string name="info_main_card"> For detailed information, click on the card. \n The city name can be entered in both Latin and Cyrillic. \nYou can also enter the international code of the Airport.</string>
    <string name="km_h">%1$s km/h</string>
    <string name="mm">%1$s mm</string>
    <string name="today">today</string>
    <string name="week">week</string>
    <string name="astro">astro</string>
    <string name="account">account</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="back">click button to back</string>
    <string name="sign_up">Sign up</string>
    <string name="already_with_us">Already with us?</string>
    <string name="sign_in">Sign in</string>
    <string name="registration">Registration</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in_text">Login</string>
    <string name="sign_out">Sign out</string>
    <string name="no_access_text">To access this screen, register and log in under the Account tab.</string>
    <string name="sign_up_successful">Sign Up successful</string>
    <string name="all_fields_must_be_filled_in">All fields must be filled in!</string>
    <string name="sign_in_successful">Sign In successful</string>
    <string name="important_information">Important information!</string>
    <string name="i_understand">I understand!</string>
    <string name="text_in_dialog"> The password field must contain at least 6 characters. \n The mail field must be in the format: mail@mail.com</string>
    <string name="new_moon">New moon</string>
    <string name="waxing_crescent">Waxing crescent</string>
    <string name="first_quarter">First quarter</string>
    <string name="waxing_gibbous">Waxing gibbous</string>
    <string name="full_moon">Full moon</string>
    <string name="waning_gibbous">Waning gibbous</string>
    <string name="last_quarter">Last quarter</string>
    <string name="waning_crescent">Waning crescent</string>
    <string name="error_moon_phase">Error moon phase!</string>
    <string name="sign_out_successful">sign out successful!</string>
    <string name="attention">Attention!</string>
    <string name="gps_question">Want to turn on GPS to check the weather based on your location?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="location_question">Functionality is limited! You have not given permission to use your location. Want to enable this in settings?</string>
    <string name="language_selection">Selecting weather condition language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="italian">Italian</string>
    <string name="rate_the_app">Rate this App</string>
    <string name="version_app">Version App</string>
    <string name="rate">Rate</string>
    <string name="text_click_on_day">Click on a day at the top of the screen to see the hourly forecast.</string>
    <string name="no_network">No network! You may have Airplane mode turned on.</string>
    <string name="city_does_not_exist">A city like this does not exist!</string>
    <string name="access_key_error">Access key error (API key)!</string>
    <string name="rates_this_app">Your rating: %1$s. Thank you for rating!</string>
    <string name="error_city_name">Incorrect city name! Try again!</string>
    <string name="internet_error">Houston, we have a problem! Looks like there is a problem with the internet! Check if airplane mode is turned on!</string>

</resources>